compiler/kernc_cli/tests/soundness/run-pass/projection/mut_trait_object_pointer_projection_uses_explicit_assoc_binding.rn
// exit: 0

type Base[N: usize] = trait {
    type Out;
};

type Handle = *mut Base[4, Out = i64];

fn lift(value: Handle.Base[4].Out) Handle.Base[4].Out {
    return value;
}

fn main() i32 {
    return (lift(7) as i32) - 7;
}
