compiler/kernc_cli/tests/soundness/reject/projection/bare_trait_object_pointer_projection_requires_explicit_assoc_binding.rn
// stderr: cannot resolve associated type projection `*Base[4].Base[4].Out`

type Base[N: usize] = trait {
    type Out;
};

type Handle = *Base[4];

fn lift(value: Handle.Base[4].Out) Handle.Base[4].Out {
    return value;
}

fn main() i32 {
    return 0;
}
